--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hugeicons/react": "^1.0.0",
     "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-label": "^2.1.1",
@@ -21,14 +21,13 @@
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-table": "^8.20.6",
     "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "hugeicons-react": "^0.3.0",
     "lucide-react": "^0.474.0",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.3.5",
     "recharts": "^2.15.1",
+    "sharp": "^0.33.5",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.6.0",
     "tailwind-variants": "^0.3.1",
@@ -45,5 +44,6 @@
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "yarn@4.6.0+sha512.5383cc12567a95f1d668fbe762dfe0075c595b4bfff433be478dbbe24e05251a8e8c3eb992a986667c1d53b6c3a9c85b8398c35a960587fbd9fa3a0915406728"
 }
